Add and update data sources documentation and notebook code for clinical data mapping

--- a/workflow/notebooks/loading_in_clinical_data_practice.ipynb
+++ b/workflow/notebooks/loading_in_clinical_data_practice.ipynb
@@ -10,13 +10,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "51d9a549",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column names:\n",
+      "Case ID\n",
+      "Patient affiliation\n",
+      "Age at Histological Diagnosis\n",
+      "Weight (lbs)\n",
+      "Gender\n",
+      "Ethnicity\n",
+      "Smoking status\n",
+      "Pack Years\n",
+      "Quit Smoking Year\n",
+      "%GG\n",
+      "Tumor Location (choice=RUL)\n",
+      "Tumor Location (choice=RML)\n",
+      "Tumor Location (choice=RLL)\n",
+      "Tumor Location (choice=LUL)\n",
+      "Tumor Location (choice=LLL)\n",
+      "Tumor Location (choice=L Lingula)\n",
+      "Tumor Location (choice=Unknown)\n",
+      "Histology \n",
+      "Pathological T stage\n",
+      "Pathological N stage\n",
+      "Pathological M stage\n",
+      "Histopathological Grade\n",
+      "Lymphovascular invasion\n",
+      "Pleural invasion (elastic, visceral, or parietal)\n",
+      "EGFR mutation status\n",
+      "KRAS mutation status\n",
+      "ALK translocation status\n",
+      "Adjuvant Treatment\n",
+      "Chemotherapy\n",
+      "Radiation\n",
+      "Recurrence\n",
+      "Recurrence Location\n",
+      "Date of Recurrence\n",
+      "Date of Last Known Alive\n",
+      "Survival Status\n",
+      "Date of Death\n",
+      "Time to Death (days)\n",
+      "CT Date\n",
+      "Days between CT and surgery\n",
+      "PET Date\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('C:/Users/sumay/Downloads/NSCLC.csv')\n",
+    "df = pd.read_csv('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/NSCLC.csv')\n",
     "\n",
     "# Get a list of the variable/column names from the clinical dataset\n",
     "column_names = df.columns.tolist()\n",
@@ -41,7 +89,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('C:/Users/sumay/Downloads/TCGA-LIHC.tsv', sep='\\t')\n",
+    "df = pd.read_csv('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/TCGA-LIHC.tsv', sep='\\t')\n",
     "\n",
     "# Get a list of the variable/column names from the  dataset\n",
     "column_names = df.columns.tolist()\n",
@@ -70,7 +118,7 @@
     "# Read the JSON file containing clinical data\n",
     "# The file contains nested fields that need to be expanded\n",
     "\n",
-    "df = pd.read_json('C:/Users/sumay/Downloads/TCGA-LIHC-small.json')\n",
+    "df = pd.read_json('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/TCGA-LIHC-small.json')\n",
     "\n",
     "# Explode the family_histories list so each entry becomes its own row\n",
     "exploded = df.explode('family_histories')  # Each family_histories entry becomes a separate row\n",
@@ -165,15 +213,15 @@
     "from pandas import ExcelWriter  # Import ExcelWriter to save DataFrames to Excel\n",
     "\n",
     "# --- NSCLC CSV ---\n",
-    "df_csv = pd.read_csv('C:/Users/sumay/Downloads/NSCLC.csv')  # Load CSV file\n",
+    "df_csv = pd.read_csv('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/NSCLC.csv')  # Load CSV file\n",
     "columns_csv = pd.DataFrame({'Column Name': df_csv.columns.tolist()})  # Create DataFrame of column names\n",
     "\n",
     "# --- TCGA-LIHC TSV ---\n",
-    "df_tsv = pd.read_csv('C:/Users/sumay/Downloads/TCGA-LIHC.tsv', sep='\\t')  # Load TSV file\n",
+    "df_tsv = pd.read_csv('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/TCGA-LIHC.tsv', sep='\\t')  # Load TSV file\n",
     "columns_tsv = pd.DataFrame({'Column Name': df_tsv.columns.tolist()})  # Create DataFrame of column names\n",
     "\n",
     "# --- TCGA-LIHC JSON ---\n",
-    "df_json = pd.read_json('C:/Users/sumay/Downloads/TCGA-LIHC-small.json')  # Load JSON file\n",
+    "df_json = pd.read_json('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/TCGA-LIHC-small.json')  # Load JSON file\n",
     "\n",
     "# Flatten nested columns for JSON using the same logic as your printout cell\n",
     "json_columns = []  # List to store all expanded column names\n",
@@ -220,6 +268,107 @@
     "    columns_json.to_excel(writer, sheet_name='TCGA_LIHC_JSON', index=False)  # Save JSON columns\n",
     "print(f\"Excel file with all clinical columns saved to: {output_path}\")  # Confirm save"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a794ba27",
+   "metadata": {},
+   "source": [
+    "RADCURE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a157bd47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code to generate list of column names for RADCURE Excel file\n",
+    "import pandas as pd\n",
+    "df = pd.read_excel('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/RADCURE.xlsx')\n",
+    "\n",
+    "# Get a list of the variable/column names from the clinical dataset\n",
+    "column_names = df.columns.tolist()\n",
+    "print(\"Column names:\")\n",
+    "for col in column_names:\n",
+    "    print(col)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a552e1cb",
+   "metadata": {},
+   "source": [
+    "HNSCC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bfc09a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column names:\n",
+      "PatientID\n",
+      "ClinicalTrialTimePointID\n",
+      "SeriesInstanceUID\n",
+      "SeriesDescription\n",
+      "StudyDescription\n",
+      "StudyInstanceUID\n",
+      "StudyDate\n",
+      "ROIVolume\n",
+      "DICOM Type\n",
+      "StructureSetLabel\n",
+      "Annotation Type\n",
+      "ReferencedSeriesInstanceUID\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('C:/Users/sumay/BHKLab/clinical_data_mapping/data/rawdata/HNSCC.csv')\n",
+    "\n",
+    "# Get a list of the variable/column names from the clinical dataset\n",
+    "column_names = df.columns.tolist()\n",
+    "print(\"Column names:\")\n",
+    "for col in column_names:\n",
+    "    print(col)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbd30f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns in TCGA-BLCA but not in TCGA-HNSC:\n",
+      "\n",
+      "Columns in TCGA-HNSC but not in TCGA-BLCA:\n",
+      "\n",
+      "Number of columns common to both: 210\n"
+     ]
+    }
+   ],
+   "source": [
+    "Columns in TCGA-BLCA but not in TCGA-LUSC:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d44f5a49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
